[package]
name = "rust_miscellaneous_pkg"
version = "0.4.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json","cookies"]}
serde = "1.0.114"
serde_json = "1.0"
serde_derive = "1.0.114"
bytes = "1"
base64="0.13.0"
image="0.24.3"
chrono = "0.4"
rand = "0.8.5"
rayon = "1.5.3"
futures = "0.3.23"
tokio-test = "0.4.2"
bio = "0.41.0"
nalgebra = "0.31.1"
umya-spreadsheet = "0.8.0"
regex = "1.6.0"
openssl = "0.10.42"
hex = "0.4.3"
fakeit = "1.1.1"
quickxml_to_serde = "0.5.0"
uuid = "^1"
docx-rs = "0.4.5"
bit-vec = {version = "0.6.3", features = ["serde"]}
postgres = {version = "^0.19.4", features = ["array-impls","with-bit-vec-0_6","with-chrono-0_4","with-eui48-0_4","with-eui48-1","with-geo-types-0_6","with-geo-types-0_7","with-serde_json-1","with-uuid-0_8","with-uuid-1","with-time-0_2","with-time-0_3"]}
geo-types = "0.7.7"
tiny-keccak = { version = "2.0.0", features = ["cshake","k12","keccak","kmac","parallel_hash","sha3","shake","tuple_hash"] }
sqlx = { version = "0.6.2", features = ["tls","any","mssql","mysql","sqlite","runtime-async-std-native-tls", "postgres","time","uuid","decimal","ipnetwork","bit-vec"]}
async-std = { version = "1", features = [ "attributes" ] }
rust_decimal = "1.26"
geozero-core = "0.6.2"
[profile.test]
opt-level = 1