[package]
name = "rust_miscellaneous_pkg"
version = "0.7.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking","json","cookies"], optional = true}
serde = {version = "1.0.114", optional = true}
serde_json = {version = "1.0.100", optional = true}
serde_derive = {version = "1.0.126", optional = true}
bytes = {version = "1.4.0", optional = true}
base64 = {version = "0.21.2", optional = true}
image = {version = "0.24.6",optional = true}
chrono = {version = "0.4.26",optional = true}
rand = {version = "0.8.5",optional = true}
rayon = {version = "1.7.0",optional = true}
futures = {version = "0.3.28",optional = true}
tokio-test = {version = "0.4.2",optional = true}
bio = {version = "1.3.1",optional = true}
nalgebra = {version = "0.32.2",optional = true}
umya-spreadsheet = {version = "0.9.2",optional = true}
regex = {version = "1.9.1",optional = true}
openssl = {version = "0.10.55",optional = true}
hex = {version = "0.4.3",optional = true}
fakeit = {version = "1.1.2",optional = true}
quickxml_to_serde = {version = "0.5.0",optional = true}
uuid = {version = "1.4.0",optional= true}
docx-rs = {version = "0.4.7" , optional=true}
bit-vec = {version = "0.6.3", features = ["serde"], optional=true}
geo-types = {version = "*", optional = true}
smartcore = {version = "0.3.0", optional = true}
tiny-keccak = {optional = true, version = "2.0.0", features = ["cshake","k12","keccak","kmac","parallel_hash","sha3","shake","tuple_hash"] }
sqlx = { optional = true, version = "0.6.3", features = ["decimal","any","mysql","sqlite","runtime-async-std-native-tls", "postgres","time","uuid","ipnetwork","bit-vec"]}
async-std = { optional = true, version = "1", features = [ "attributes" ] }
rust_decimal = {version = "1.26", optional = true}
geozero-core = {version = "0.6.2",optional = true}
[profile.test]
opt-level = 1
[features]
default = ["basic_arithmetic","basic_file_operation","bio_algorithms","crypto","custom_request","docx_mod","excel_operations","faker","hashing","image_resizer","machine_learning","matrix_operations","random_numbers","regex_operations","sql_operation","xml_to_json_convert"]
basic_arithmetic = []
basic_file_operation = []
bio_algorithms = ["dep:bio"]
crypto = ["dep:openssl","dep:hex","dep:bytes"]
custom_request = ["dep:reqwest","dep:serde","dep:tokio-test"]
docx_mod = ["dep:docx-rs","dep:serde_json"]
excel_operations = ["dep:rayon","dep:serde_json","dep:umya-spreadsheet","dep:regex"]
faker = ["dep:fakeit"]
hashing = ["dep:tiny-keccak"]
image_resizer = ["dep:image"]
machine_learning = ["dep:smartcore"]
matrix_operations = ["dep:nalgebra"]
random_numbers = ["dep:rand"]
regex_operations = []
sql_operation = ["dep:futures","dep:serde_json","dep:sqlx","dep:rust_decimal","dep:uuid","dep:bit-vec","dep:rust_decimal"]
xml_to_json_convert = ["dep:quickxml_to_serde","dep:serde_json"]